Writed test of the main most important services